handle different types and numbers of annotations on multiple pages

--- a/src/app/pdf-viewer/pdf-viewer.component.html
+++ b/src/app/pdf-viewer/pdf-viewer.component.html
@@ -1,7 +1,7 @@
 <p>pdf-viewer works!</p>
 <ngx-extended-pdf-viewer    [height]="'60vh'" [showDownloadButton]="true"
                            [showOpenFileButton]="false" [showPrintButton]="false" [showRotateButton]="false"
-                           [showSecondaryToolbarButton]="false" [showSidebarButton]="false" [showTextEditor]="false"
+                           [showSecondaryToolbarButton]="false" [showSidebarButton]="false" [showTextEditor]="true"
                            [src]="'/assets/pdfs/test.pdf'"
                            [useBrowserLocale]="true">
   </ngx-extended-pdf-viewer>
